# extract_loggernet

./: .gitignore  aws-floatr.yaml  environment.yaml  extract_loggernet.conf.yaml  extract_loggernet.py  extract_loggernet_conf_example.yaml  extract_loggernet_pattern_example.yaml  pyproject.toml  readme.md  requirements.txt
test/: test_extract_loggernet.py
test_files/CR23/: extract_loggernet_conf.yaml
test_files/CR23-DAILY/: extract_loggernet_conf.yaml
test_files/CR23/.extract_loggernet_cache/: .GndRadData_file_position.yaml
test_files/CR3000/: .extract_loggernet_file_position.yaml  extract_loggernet_conf.yaml
test_files/CR3000-DAILY/: in_list.ref  out_list.out
test_files/CR3000-DAILY/in/: CR3000_Table213.20091201000000.buffer  split_loggernet.conf
test_files/MFRSR7NCH/: in_list.ref  out_list.ref  split_loggernet.conf
test_files/MFRSR7NCH/in/: skipped-MFRSR_Table155.20230317233855.bad  split_loggernet.error
test_files/PWS_002/.extract_loggernet_cache/: .CR1000x_PWS_002_IPconnect_Met_file_position.yaml
test_files/SRG/: in_list.out  out_list.out  split_loggernet.conf
test_files/SRG/in/: SRG_rain.20191016000000.buffer
tests/: test_CRXX.py  test_extract_loggernet.py  test_pytest.py
